# MovieRater

./: .gitignore  pyproject.toml
aaa/: Association.py  aaa.py  asd.py  ass.db  sqlalchemy_playground.py  unique_constraint.py
aaa/leetcode/: twosum.py
api-keys/: main.txt
backend/src/: api test.http  database.py  main.py  models.py  models.txt  schemas.py  services.py  test.db  utilites.py
backend/src/routers/: auth.py  rooms.py
backend/src/templates/: base.html  index.html
backend/src/templates/room/: detail.html  history.html
deploy/dev/: local_run.sh  ngrok.sh
docs/: learning.txt
docs/design/: _вопросы грок.txt  main.md  models ER diagram.drawio  questions
docs/design/UI/: UI.drawio
frontend/src/: miniapp.html
tests/http-tests/: test-requests.http
